# ufsm

./: .clang-format  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  README.rst  build_docker.sh  codecov.yml  configure.ac  run_docker.sh
.github/workflows/: build.yml  coverity.yml  release.yml
compose/: CMakeLists.txt
compose/src/: canvas.ufsm  colors.h  common.h  controller.h  copypaste.c  main.c  menu.c  render.h  stack.c  status.h  utils.h
doc/: architecture.rst  build.rst  build.sh  compose-user-guide.rst  conf.py  core-library-reference.rst  demo_model.ufsm  developer-guide.rst  development-guide.rst  doxygen.cfg  empty_model.ufsm  examples.rst  index.rst  intro.rst  license.rst  model-library-reference.rst  requirements.txt  test_conref.mdj  test_deephistory.mdj  test_defer.mdj  test_deferr.mdj  test_ev_repeat_orth.mdj  test_fork.mdj  test_join2.mdj  test_join_fork.mdj  test_junction.mdj  test_nested_composits.mdj  test_terminate.mdj  test_xmi_machine.mdj  transition_demo.ufsm  transition_prio_input.mdj  ufsm_architecture.dia  ufsm_logo.sketch  user-guide.rst
doc/compose-ug/: 01_intro.rst  02_commands.rst  03_create_simple_project.rst
doc/dg/: contributing.rst
doc/examples/: 01_simple.rst  (+2 more)
examples/: dimmer.ufsm
generator/: pyproject.toml  test_bdd.py
generator/tests/: __init__.py  test_simple.py
generator/ufsm_generate/: __main__.py  c_generator.py  flat_model.py  flattener.py  model.py  model_utils.py  optimizer.py  parser.py
generator/ufsm_generate/test/: test_nested_states.ufsm
libufsm-core/: Makefile.am  ufsm-core.pc.in  ufsm.c  ufsm_debug.c
libufsm-model/: Makefile.am  ll.c  model.c  region.c  stack.c  state.c  transition.c  ufsm-model.pc.in  ufsm.c
src/: .gitignore  Makefile  controller.c  controller.h  copypaste.c  m_model.c  m_transition.c  main.c  menu.c  menu.h  nav.c  nav.h  render.c  render.h  stack.c  ufsm.c  ufsm.h  ufsm_debug.c  ufsm_queue.c  ufsm_stack.c  undo.c  undo.h  utils.c  utils.h
test/: Makefile.am  nala.c  nala.h  test_choice2.c  test_deephistory.c  test_deephistory_input.xmi  test_defer.c  test_do_input.xmi  test_join2.c  test_join2_input.xmi  test_transition_conflict_input.xmi  test_xmi_machine_input.xmi
test/c_generator/: test_fork_join.c  test_nested_states3.c  test_nested_states3.ufsm
test/core/: Makefile.am  test_choice.c  test_choice2_input.xmi  test_compound_transition_input.xmi  test_compound_transitions.ufsm  test_deephistory.c  test_deephistory.ufsm  test_ev_repeat_orth.c  test_ev_repeat_orth.ufsm  test_fork.c  test_fork.ufsm  test_fork_input.xmi  test_guards2.c  test_guards2.ufsm  test_guards_actions.c  test_join2.c  test_join2.ufsm  test_junction.c  test_nested_composits.c  test_nested_composits.ufsm  test_nested_composits2.c  test_nested_composits2.ufsm  test_nested_composits2_input.xmi  test_nested_states.ufsm  test_nested_states2.c  test_nested_states3.ufsm  test_simple.c  test_simple_completion.c  test_simple_substate.c  test_state_conditions.c  test_state_conditions.ufsm  test_terminate.c  test_terminate.ufsm  test_transition_conflict.c  test_transition_conflict.ufsm  test_transition_prio.c  test_transition_prio.ufsm  test_xmi_machine.c  test_xmi_machine.ufsm
test/model/: Makefile.am  common.c  common.h  ll.c  test1.c  test1.sotc  test1.ufsm  test2.sotc  test2.ufsm  test_actions.c  test_empty_root.sotc  test_empty_root.ufsm  test_load_transitions.sotc  test_load_transitions.ufsm  test_model.c  test_stack.c  test_transitions.c  test_triggers.c
tests/: .gitignore  CMakeLists.txt  test_chained_signals.ufsm  test_final.ufsm  test_init_to_nested.c  test_init_to_nested.h  test_init_to_nested.ufsm  test_nested_composits.c  test_nested_composits.h  test_nested_composits.ufsm  test_nested_finals.ufsm  test_nested_finals2.ufsm  test_nested_states2.ufsm  test_nested_states4.ufsm  test_state_conditions.ufsm
tests/C/: test_final.c  test_fork_join.c  test_guard1.c  test_helper.h  test_init_to_nested.c  test_model1.c  test_nested_composits.c  test_nested_finals.c  test_nested_states2.c  test_nested_states3.c  test_state_conditions.c
tests/OLD/: test_deephistory.ufsm  test_fork.ufsm  test_guards2.ufsm  test_join2.ufsm  test_join3.c  test_join3.ufsm  test_nested_states.c  test_nested_states2.ufsm  test_nested_states3.c  test_nested_states3.ufsm  test_simple.c  test_simple_substate.c  test_transition_conflict.c  test_xmi_machine.ufsm
ufsm-compile/: pyproject.toml  setup.py  test.py
ufsm-compose/: Makefile.am  canvas.ufsm  controller.c  controller.h  copypaste.c  main.c  menu.c  menu.h  nav.c  nav.h  pan_and_scale.c  render.c  render.h  status.c  undo.c  undo.h  utils.c  utils.h
ufsm-compose/canvas/: canvas.ufsm  color.c  controller.c  controller.h  copypaste.c  grid.c  new_controller.c  pan_and_scale.c  region.c  selection.c  state.c  transition.c  view.c  view.h
ufsm-compose/canvas/logic/: canvas.c  canvas.h
ufsm-compose/dialogs/: add_action_dialog.c  add_action_dialog.h  add_guard_dialog.c  add_guard_dialog.h  edit_state_dialog.c  edit_string_dialog.c  edit_string_dialog.h  project_settings.c  project_settings.h  save.h  set_trigger_dialog.c  set_trigger_dialog.h
ufsm-compose/gui/: add_action_dialog.c  add_action_dialog.h  add_guard_dialog.c  add_guard_dialog.h  edit_string_dialog.c  set_trigger_dialog.c  set_trigger_dialog.h
ufsm-compose/logic/: canvas.c  canvas.h
ufsm-generate/: Makefile.am  main.c  output.c  output.h  test_pyeda.py  ufsmimport.c
ufsm-generate/ufsm_generate/: __main__.py  c_generator.py  canvas.ufsm  flat_model.py  flattener.py  model.py  model_utils.py  output.c  output.h  parser.py  test_model  test_model.c
ufsm-generate/ufsm_generate/test/: Makefile  test1.c  test1.ufsm  test_chained_signals.ufsm  test_final.c  test_final.ufsm  test_final_state_completion.ufsm  test_fork_join.ufsm  test_guard1.ufsm  test_helper.c  test_helper.h  test_model1.ufsm  test_nested_finals2.c  test_nested_finals2.ufsm  test_nested_states3.c  test_nested_states3.ufsm  test_nested_states4.c  test_nested_states4.ufsm
(+171 files in other folders)
