[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ufsm_generate"
version = "0.5.2"
authors = [
  { name="Jonas Blixt", email="jonpe960@gmail.com" },
]
description = "uFSM statechart code generator"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jonasblixt/ufsm"
"Bug Tracker" = "https://github.com/jonasblixt/ufsm/issues"

[project.scripts]
ufsm-generate = "ufsm_generate.__main__:main"

[project.optional-dependencies]
dev = [
    "black>=18.3-alpha.0",
]

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
